--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,15 +15,17 @@
 </head>
 
 <body>
-    <header>
-        <a href="/">
-            <div>NYT Scraper</div>
-        </a>
+    <header class="container">
+        <h1 class="jumbotron">
+            <a style="text-decoration: none;" href="/">
+                NYT Scraper
+            </a>
+        </h1>
         <form action="/scrape" method="GET">
             <button type="submit" id="scrape">Scrape</button>
         </form>
     </header>
-    <div id="container">
+    <div class="container py-4">
         {{{ body }}}
     </div>
 
