--- a/public/style.css
+++ b/public/style.css
@@ -1,18 +1,11 @@
-body { background-color: #F2F6D0 }
-#articles {
-  display: inline-block;
-  overflow: auto;
-  width: 60%;
-  height: 700px;
-}
-#notes {
+/*#notes {
   float: right;
   width: 30%;
-}
+}*/
 textarea, input {
   display: block;
   width: 100%;
-  background-color: #FCF5C7;
+  background-color: rgb(238, 238, 238);
 }
 input {
   height: 36px;
@@ -22,6 +15,10 @@ textarea {
   height: 200px;
   font-size: 18px;
 }
-.article:hover{
+.article h2:hover{
     cursor: pointer;
+}
+.article:hover{
+
+    background-color: #94aec5;
 }
